[package]
name = "mpc"
version = "0.1.0"
edition = "2024"

[dependencies]
cggmp24 = { version = "0.7.0-alpha.1", features = ["hd-wallet", "curve-secp256k1"] }
cggmp24-keygen = { version = "0.7.0-alpha.1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
futures = "0.3"
bincode = "2"
rand = "0.8"
sha2 = "0.10"
anyhow = "1"
async-stream = "0.3"
tronic = "0.3"
k256 = { version = "0.13", features = ["ecdsa"] }
signature = "2.2"
